tools/clang/raw_ptr_plugin/tests/container_ptr_fields_inverse.txt
container_ptr_fields_inverse.cpp:13:30: error: [chromium-containers] Use raw_ptr<T> instead of T* in the container template argument.
  MyArbitraryContainer<int*> arbitrary_member;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
1 error generated.
